# M5Unit-ACSSR-Internal-FW

./: CMakeLists.txt  Makefile  README.md  nvs.csv  sdkconfig  sdkconfig.old  sdkconfigs
components/test/: CMakeLists.txt  boardio.c  i2c_slave.c  modbusslave.c  neopixel.c  nvs_memory.c  nvs_sync.c
components/test/include/: boardio.h  i2c_slave.h  modbusslave.h  neopixel.h  nvs_memory.h  nvs_sync.h
main/: CMakeLists.txt  Kconfig.projbuild  acssr.c
